2014-10-06  Holger Seelig  <holger.seelig@yahoo.de>

	* GeometryPropertiesEditor.h:
	* GeometryPropertiesEditor.cpp: 

2014-10-06  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DEditorObject.h:
	* BrowserWindow.h:
	* Hammer.svg:
	* BrowserWindow.cpp:
	* BrowserWindow.xml:
	* NameEntry.h:
	* X3DBrowserWindowInterface.h:
	* X3DBrowserWindowInterface.cpp: 

2014-10-04  Holger Seelig  <holger.seelig@yahoo.de>

	* GridEditor.xml:
	* NodeIndex.cpp:
	* AngleTool.cpp:
	* X3DAngleEditor.h:
	* X3DAngleEditor.cpp:
	* X3DGridEditorInterface.h:
	* X3DGridEditorInterface.cpp: 

2014-10-04  Holger Seelig  <holger.seelig@yahoo.de>

	* GridEditor.xml:
	* X3DGridEditor.h:
	* X3DAngleEditor.h:
	* X3DGridEditor.cpp:
	* X3DAngleEditor.cpp:
	* X3DGridEditorInterface.h:
	* X3DGridEditorInterface.cpp:
	* X3DTextureTransformEditor.h:
	* X3DTextureTransformEditor.cpp:
	* X3DLayoutEditor.cpp:
	* X3DTransformEditor.cpp:
	* X3DGeoTransformEditor.cpp:
	* PrecisionPlacementPanel.cpp: 

2014-10-04  Holger Seelig  <holger.seelig@yahoo.de>

	* TextureEditor.xml:
	* X3DFieldAdjustment3.h:
	* X3DFieldAdjustment4.h:
	* X3DFieldAdjustment2.h:
	* X3DTextureEditorInterface.h:
	* X3DTextureEditorInterface.cpp:
	* PrecisionPlacementPanel.xml:
	* X3DLayoutEditor.h:
	* X3DTextureTransformEditor.h:
	* X3DLayoutEditor.cpp:
	* X3DTextureTransformEditor.cpp:
	* X3DTransformEditor.h:
	* X3DPrecisionPlacementPanelInterface.h:
	* X3DPrecisionPlacementPanelInterface.cpp:
	* X3DTransformEditor.cpp:
	* X3DTextureTransformNodeEditor.cpp:
	* X3DGeoTransformEditor.h:
	* X3DGeoTransformEditor.cpp:
	* PrecisionPlacementPanel.h:
	* PrecisionPlacementPanel.cpp: 

2014-10-04  Holger Seelig  <holger.seelig@yahoo.de>

	* PrecisionPlacementPanel.xml:
	* X3DTransformEditor.h:
	* X3DPrecisionPlacementPanelInterface.h:
	* X3DTransformEditor.cpp:
	* X3DPrecisionPlacementPanelInterface.cpp: 

2014-10-03  Holger Seelig  <holger.seelig@yahoo.de>

	* SFColorRGBAButton.h: 

2014-10-02  Holger Seelig  <holger.seelig@yahoo.de>
