@@ -109,12 +109,14 @@ public:
 	solid () const
 	{ return *fields .solid; }
 
-	///  @name Tests
+	///  @name Member access
 
 	virtual
 	bool
 	isLineGeometry () const final override
 	{ return false; }
+
+	///  @name Operations
 
 	virtual
 	SFNode
