@@ -1,5 +1,17 @@
 2014-10-06  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* X3D.h:
+	* Box.h:
+	* Box.cpp:
+	* X3DExecutionContext.h:
+	* BoxOptions.cpp:
+	* IndexedLineSet.h:
+	* IndexedFaceSet.h:
+	* IndexedLineSet.cpp:
+	* IndexedFaceSet.cpp: 
+
+2014-10-06  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Loader.h:
 	* Loader.cpp:
 	* GoldenGate.h:
